# taptext

./: .gitignore  Cargo.toml  Info.plist  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
docs/: RELEASE.md
src/: audio.rs  capture.rs  cli.rs  lib.rs  main.rs  model.rs  pipeline.rs  recognition.rs  transcript.rs  vad.rs
tests/: version_test.rs
